<resources>
    <string name="app_name">HELPENG</string>
    <string name="software">Software (программное обеспечение)</string>
    <string name="hardware">Hardware (аппаратное обеспечение)</string>
    <string name="general_verbs">General verbs (общие глаголы)</string>
    <string name="internet">Internet (интернет)</string>
    <string name="exit">Выйти</string>
    <string name="start">Начать изучение!</string>
    <string name="hint_modul">Вам нужно выбрать одно из направлений для вашего изучения.</string>
    <string name="statistic">Hardware: 0% \nSoftware: 0% \nGeneral verbs: 0% \nInternet: 0%</string>
    <string name="learn">Учить</string>
    <string name="test">Тест</string>
    <string name="software_analize">Ваши результаты:</string>
    <string name="StartInstruction">Данное приложение разработано для книжной ориентации вашего телефона. Для изучения расположите своё устройство вертикально.</string>
    <string name="QuestionNumber">\"Вопрос № \"</string>

</resources>